# software_cmake_arduino

./: .gitmodules
Cmake_avr/: build_script.sh
Cmake_gcc_linux/: CMakeLists.txt  build_script.sh
Cmake_gcc_linux/src/: main.cpp
Cmake_gcc_windows/: build_script.bat  build_script_cmake.bat
SimpleApp/: CMakeLists.txt
SimpleApp/src/: other.cpp
